# learn-cinder

./: .gitignore  README.md  SUMMARY.md  book.json  sublime.sublime-project
book/: CINDER_APP.md  README.md  building_on_vmware_ubuntu15.md  cinder.md  cinder__app.md  cinder__app__App.md  cinder__app__AppBase.md  cinder__app__AppBase__Settings.md  cinder__app__AppMsw.md  cinder__app__MouseEvent.md  getting_started.md  guide_to_meshes.md  images_in_cinder.md  installation_guide.md  resources.md
book/cinder/: CINDER_APP.md  DataSource.md  ImageSource.md  ObjLoader.md  Surface.md  Timer.md  TriMesh.md  VECDIM.md  color.md  geom.md  loadImage.md  loadUrl.md
book/cinder/AppBase/: loadResource.md
book/cinder/app/: AppBase.md  AppLinux.md  AppMac.md  AppMsw.md  MouseEvent.md  loadAsset.md
book/cinder/geom/: Source.md
book/cinder/gl/: Batch.md  Fbo.md  GlslProg.md  ShaderDef.md  VboMesh.md  bindStockShader.md  color.md  drawSolidCircle.md  getStockShader.md
book/styles/: website.sass
docs/: cinder__app__AppBase.md
projects/02-interactivity/: CMakeLists.txt
projects/02-interactivity/include/: Resources.h
projects/03-Cube/: README.md
projects/03-Cube/linux/: CMakeLists.txt  cibuild
projects/03-Cube/src/: CubeApp.cpp
projects/03-basics/src/: basics.cpp
projects/04-addison/linux/: CMakeLists.txt
projects/04-addison/src/: Addison.cpp
projects/interactivity/src/: interactivityApp.cpp
projects/interactivity/vc2013/: Resources.aps  interactivity.sln  interactivity.vcxproj  interactivity.vcxproj.filters
projects/learn-cinder/src/: learn-cinder.cpp
(+3 files in other folders)
